<resources>
    <string name="app_name">Snob Quiz</string>
    <string name="heading">Find Out What Kind of Snob You Are</string>
    <string name="sport_button">Calculate</string>
    <string name="toggle_on">Yes</string>
    <string name="toggle_off">No</string>
    <string-array name="exercise">
        <item>Europe</item>
        <item>Asia</item>
        <item>South America</item>
        <item>Africa</item>
    </string-array>
    <string name="radio1">Academics</string>
    <string name="radio2">Culture</string>
    <string name="radio3">Tech</string>
    <string name="food">Food</string>
    <string name="coffee">Coffee</string>
    <string name="art">Art</string>



</resources>
